@@ -3,9 +3,9 @@ public class Q1
     public static void main(String[] args)
     {
         // Convert int to Integer
-        int intValue = 42;
-        Integer integerValue = new Integer(intValue);
-        System.out.println("Original int value: " + intValue);
-        System.out.println("Converted Integer object: " + integerValue);
+        int x = 42; //input
+        Integer y = Integer.valueOf(x);
+        System.out.println("Original: " + x);
+        System.out.println("Converted: " + y);
     }
 }
