@@ -1,9 +1,10 @@
-public class Q3 {
-
-    public static void main(String[] args) {
-        double doubleValue = 3.14159;
-        Double doubleObject = new Double(doubleValue);
-        System.out.println("Original double value: " + doubleValue);
-        System.out.println("Converted Double object: " + doubleObject);
+public class Q3
+{
+    public static void main(String[] args)
+    {
+        double x = 3.14159;
+        Double y = Double.valueOf(x);
+        System.out.println("Original: " + x);
+        System.out.println("Converted: " + y);
     }
 }
